# WiseRate

./: .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  ENHANCEMENTS_COMPLETE.md  FINAL_CLEANUP.md  IMPROVEMENTS.md  LICENSE  Makefile  PIPELINES_IMPROVEMENTS.md  README.md  VALIDATION_COMPLETE.md  env.example  justfile  mypy.ini  pyproject.toml
.github/actions/build-package/: action.yml
.github/actions/run-tests/: action.yml
.github/actions/setup-environment/: action.yml
.github/workflows/: ci-cd.yml  ci.yml  publish-release.yml  release.yml
scripts/: generate_changelog.py
src/wiserate/: __init__.py  alerts.py  app.py  cli.py  config.py  constants.py  exceptions.py  exchange.py  logging_config.py  models.py  utils.py
tests/: __init__.py  conftest.py  test_alerts.py  test_app.py  test_cli.py  test_config.py  test_exceptions.py  test_exchange.py  test_models.py  test_utils.py
